Check CONFIG_PROC_FS in configure
CONFIG_PROC_FS is checked in configure script.

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -44,6 +44,7 @@ CONFIG_MODULES		= y
 CONFIG_SND_MVERSION	= @CONFIG_SND_MVERSION@
 CONFIG_ISAPNP_KERNEL	= @CONFIG_ISAPNP_KERNEL@
 CONFIG_PNP_KERNEL	= @CONFIG_PNP_KERNEL@
+CONFIG_PROC_FS		= @CONFIG_PROC_FS@
 
 ifndef NEW_KBUILD
 INCLUDE		= -I$(TOPDIR)/include @EXTRA_INCLUDES@ @KERNEL_INC@
