--- a/configure.in
+++ b/configure.in
@@ -1783,6 +1783,10 @@ test "$CONFIG_SND_RTCTIMER" = "m" && AC_DEFINE(CONFIG_SND_RTCTIMER_MODULE)
 CONFIG_RTC=$CONFIG_SND_RTCTIMER
 AC_SUBST(CONFIG_RTC)
 
+dnl Check for procfs
+CHECK_KERNEL_CONFIG(CONFIG_PROC_FS, [Procfs support])
+AC_SUBST(CONFIG_PROC_FS)
+
 dnl Check for USB
 CHECK_KERNEL_CONFIG(CONFIG_USB, [USB support])
 if test "$CONFIG_USB" != "y"; then
