old USB API compatibility for US-X2Y driver

--- a/usb/usx2y/Makefile
+++ b/usb/usx2y/Makefile
@@ -5,7 +5,7 @@ endif
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
-clean-files := usbusx2y.c usX2Yhwdep.c
+clean-files := usX2Yhwdep.c usbusx2y.c usbusx2yaudio.c
 
 include $(SND_TOPDIR)/alsa-kernel/usb/usx2y/Makefile
 
@@ -14,4 +14,5 @@ EXTRA_CFLAGS += -I$(SND_TOPDIR)/alsa-kernel/usb/usx2y
 include $(SND_TOPDIR)/Rules.make
 
 usbusx2y.c: usbusx2y.patch $(SND_TOPDIR)/alsa-kernel/usb/usx2y/usbusx2y.c
+usbusx2yaudio.c: usbusx2yaudio.patch $(SND_TOPDIR)/alsa-kernel/usb/usx2y/usbusx2yaudio.c
 usX2Yhwdep.c: usX2Yhwdep.patch $(SND_TOPDIR)/alsa-kernel/usb/usx2y/usX2Yhwdep.c
