--- a/configure.in
+++ b/configure.in
@@ -1900,7 +1900,19 @@ if test "$CONFIG_SND_MODULE" = y; then
   echo "Hacking autoconf.h..."
   rm -f include/linux/autoconf.h
   mkdir -p include/linux
-  grep -v CONFIG_SND_ $CONFIG_SND_KERNELDIR/include/linux/autoconf.h > include/linux/autoconf.h
+  if ! test -r  $CONFIG_SND_KERNELDIR/include/linux/autoconf.h ; then
+    if test -n "$kernelbuild" -a ! -r $kernelbuild/include/linux/autoconf.h; then
+      cat << EOF
+File $CONFIG_SND_KERNELDIR/include/linux/autoconf.h does not exist.
+Fatal error - aborting...
+EOF
+      exit 1
+    else
+      grep -v CONFIG_SND_ $kernelbuild/include/linux/autoconf.h > include/linux/autoconf.h
+    fi
+  else
+    grep -v CONFIG_SND_ $CONFIG_SND_KERNELDIR/include/linux/autoconf.h > include/linux/autoconf.h
+  fi
   cat include/autoconf-extra.h >> include/linux/autoconf.h
   cat include/config1.h >> include/linux/autoconf.h
 else
